stub out the web interface

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Scruffy - ticketsystem/kanbanboard for sysadmins 
-================================================
+Scruffy - simple issue tracker
+==============================
 
 WARNING!
 --------
